# pyldon

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.agents/skills/agent-browser/: SKILL.md
.agents/skills/nanobanana-skill/: SKILL.md  nanobanana.py
container/: Dockerfile  build.sh
container/agent_runner/: __init__.py  ipc_mcp.py  main.py
container/pi-extensions/: pyldon-ipc.ts
container/stt/: Dockerfile  build.sh  transcribe.py
container/stt/parakeet-cli/: Cargo.toml
container/stt/parakeet-cli/src/: main.rs
docs/planning/: issue-container-not-logged-in.md
docs/planning/2026-02-21/: pi-dev-migration-plan.md
pyldon/: __init__.py  cli.py  config.py  container_runner.py  db.py  main.py  matrix_client.py  matrix_monitor.py  models.py  mount_security.py  pairing.py  stt.py  task_scheduler.py  tts.py  utils.py
services/qwen3-tts/: Dockerfile  deploy.sh  docker-compose.yml  requirements.txt  tts_model.py  voice-design-prompts.md
services/qwen3-tts/voices/: default.txt
systemd/: pyldon.service
tests/: test_config.py  test_db.py  test_ipc_mcp.py  test_models.py  test_mount_security.py  test_pairing.py  test_utils.py
